--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
 }
 #main-container-research{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
     /* height: 30%; */
     padding: 5%;
 }
@@ -17,6 +18,7 @@
     filter: grayscale();
 
 }
+
 #bodybackA{
     height: 100vh;
     background-size: cover; 
@@ -40,7 +42,6 @@
 #city{
     background: transparent;
     border: none;
-    padding-bottom: 7px;
     box-shadow: inset 0 0 0 1000px rgba(223, 223, 223, 0.39);
     text-align: center;
     
@@ -89,6 +90,7 @@
     /* width: 100vw; */
     margin: 10%;
     align-items: center;
+    justify-content: center;
     
     color: rgba(236, 234, 234, 0.897);
     font-weight: bolder;
@@ -96,12 +98,17 @@
     
 }
 .day-name{
-    /* width: 33vw; */
+    width: 100vw;
+    flex-shrink: 2;
     
 }
 .icon-pop{
     height: 100%;
-    /* width: 33vw; */
+    /* width: 100vw; */
+    flex-shrink: 1;
+    display: flex;
+    flex-direction: column;
+    
     
 
 }
@@ -117,6 +124,7 @@
     
 }
 .temperature{
-    /* width: 33vw; */
+    width: 100vw;
+    flex-shrink: 2;
 text-align: right;
 }
