--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@
   box-shadow: inset 0 0 0 1000px rgba(223, 223, 223, 0.39);
   color: lightgray;
 }
-#cityButt:focus {
+/* #cityButt:focus {
   box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),
     0px 0.5px 1px rgba(0, 0, 0, 0.1),
     0px 0px 0px 3.5px rgba(173, 173, 173, 0.521);
   outline: 0;
-}
+} */
 #today-date {
   color: rgba(255, 255, 255, 0.877);
 }
