--- a/style.css
+++ b/style.css
@@ -20,7 +20,10 @@
 #bodybackA {
   height: 100vh;
   background-size: cover;
+ 
+
 }
+
 
 #container-results {
   display: flex;
@@ -94,7 +97,7 @@
   justify-content: center;
 
   color: rgba(236, 234, 234, 0.897);
-  font-weight: bolder;
+  font-weight: lighter;
 }
 .day-name {
   width: 100vw;
@@ -118,4 +121,53 @@
   width: 100vw;
   flex-shrink: 2;
   text-align: right;
+}
+
+@media only screen and (min-width: 600px){
+
+    #bodybackA{
+        height: 100vh;
+    }
+
+    #fiveDays{
+        display: flex;
+        flex-direction: row;
+        height: 20vh;
+        margin-top: 4%;
+        box-shadow: none;
+        border: none;
+
+    }
+    .ic{
+        height: 60%;
+        transform: translate3d(0px, 12px, 10px);
+        position: relative;
+    }
+    .popic{
+        position: absolute;
+        transform: translate3d(19px, 62px, 10px);
+    }
+    .day{
+        flex-direction: column;
+        margin: 0;
+        height: 100%;
+        width: 25%;
+        box-shadow: inset 0 0 0 1000px rgba(103, 103, 109, 0.651);
+        border: 3px solid rgba(36, 34, 36, 0.253);
+        border-radius: 11%;
+        margin: 2px;
+        font-weight: lighter;
+    }
+    .day-name{
+        width: 25%;
+        text-align: center;
+        position: relative;
+        transform: translate3d(0px, 14px, 10px);
+    }
+    .temperature{
+        width: 25%;
+        text-align: center;
+        height: 100%;
+        transform: translateY(-19px);
+    }
 }
