--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+  
+  
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 #main-container-research {
   display: flex;
@@ -9,6 +20,7 @@
   align-items: center;
   justify-content: center;
   padding: 5%;
+  
 }
 #img-container {
   height: 80%;
@@ -20,6 +32,7 @@
 #bodybackA {
   height: 100vh;
   background-size: cover;
+  
  
 
 }
@@ -29,13 +42,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  /* background-color: rgba(223, 223, 223, 0.39); */
+  
 }
 
 .current-results {
   display: flex;
-  flex-direction: row;
-  gap: 10px;
+  flex-direction: column;
+  text-align: center;
+  box-shadow: inset 0 0 0 1000px rgba(103, 103, 109, 0.651);
+  border-radius: 4%;
+  border: 3px solid rgba(36, 34, 36, 0.253);
+  width: 80%;
 }
 #city {
   background: transparent;
@@ -43,41 +61,40 @@
   border: none;
   box-shadow: inset 0 0 0 1000px rgba(223, 223, 223, 0.39);
   text-align: center;
-  color: lightgray;
+  color: rgba(68, 64, 23, 0.637);
   outline: none;
-  background: #6e6d70;
   padding: 6px 14px;
 }
+#city:focus::placeholder {
+    color: transparent;
+  }
 #cityButt {
   padding: 6px 14px;
-  /* border-radius: 6px; */
-  
   border: none;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  background: #6e6d70;
+  /* background: #6e6d70; */
+  background: transparent;
   box-shadow: inset 0 0 0 1000px rgba(223, 223, 223, 0.39);
-  color: lightgray;
+  color: rgb(91, 104, 218);
 }
-/* #cityButt:focus {
-  box-shadow: inset 0px 0.8px 0px -0.25px rgba(255, 255, 255, 0.2),
-    0px 0.5px 1px rgba(0, 0, 0, 0.1),
-    0px 0px 0px 3.5px rgba(173, 173, 173, 0.521);
-  outline: 0;
-} */
+
 #today-date {
   color: rgba(255, 255, 255, 0.877);
 }
 #name-city {
   color: rgba(255, 255, 255, 0.808);
-  font-size: 20px;
+  font-size: 15px;
+  
 }
 #current {
-  font-size: 80px;
+  font-size: 60px;
   color: rgba(255, 255, 255, 0.808);
   font-weight: 100;
   letter-spacing: 0;
+  
+ 
 }
 
 #fiveDays {
@@ -122,13 +139,34 @@
   flex-shrink: 2;
   text-align: right;
 }
+footer{
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   font-size: 6px;
+   background: rgba(103, 103, 109, 0.651);
+   color: rgba(236, 234, 234, 0.897);
+   white-space: pre-line;
+   display: flex;
+   justify-content: space-between;
+   /* gap: 50%; */
+    
+}
 
 @media only screen and (min-width: 600px){
 
     #bodybackA{
-        height: 100vh;
+        /* height: 100vh; */
     }
 
+    .current-results{
+        text-align: center;
+  box-shadow: inset 0 0 0 1000px rgba(103, 103, 109, 0.651);
+  border-radius: 4%;
+  border: 3px solid rgba(36, 34, 36, 0.253);
+  padding: 14px;
+  width: 15%;
+    }
     #fiveDays{
         display: flex;
         flex-direction: row;
@@ -136,6 +174,8 @@
         margin-top: 4%;
         box-shadow: none;
         border: none;
+        justify-content: center;
+        gap: 3%;
 
     }
     .ic{
@@ -151,11 +191,10 @@
         flex-direction: column;
         margin: 0;
         height: 100%;
-        width: 25%;
+        width: 18%;
         box-shadow: inset 0 0 0 1000px rgba(103, 103, 109, 0.651);
         border: 3px solid rgba(36, 34, 36, 0.253);
         border-radius: 11%;
-        margin: 2px;
         font-weight: lighter;
     }
     .day-name{
