--- a/style.css
+++ b/style.css
@@ -57,7 +57,8 @@
 }
 #city {
   background: transparent;
-  caret-color: lawngreen;
+  caret-color:violet;
+  /* font-size: 20px; */
   border: none;
   box-shadow: inset 0 0 0 1000px rgba(223, 223, 223, 0.39);
   text-align: center;
